[package]
name = "steam_crawler"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.1.4", features = ["derive"] }
color-eyre = "0.6.2"
csv = "1.1.6"
quick-xml = "0.27.1"
scraper = "0.14.0"
serde = "1.0.152"
serde_derive = "1.0.152"
serde_json = "1.0.91"
tracing = "0.1.37"
tracing-subscriber = "0.3.16"
ureq = "2.6.2"
url = "2.3.1"
